theme/mojave.less
#app.twopanel {
    --chromeHeight1: 55px;
    #app-main {
        .app-chrome:not(.chrome-bottom) {
            backdrop-filter: none;

            .app-chrome--left,
            .app-chrome--right {
                width: 350px;
            }

            .app-chrome-item:nth-of-type(2):not(.generic) {
                margin: 0;
            }
            .app-chrome--left > div:nth-of-type(3) {
                margin-left: calc(var(--sidebarWidth)/1.8);
                transition     : margin-left 0.35s var(--appleEase);
            }

            .search-input {
                width     : 50px;
                transition: width 0.35s var(--appleEase);

                &:hover {
                    width: 140px;
                }

                &:active,
                &:focus,
                &:not(:placeholder-shown) {
                    width: 250px;
                }
            }
            .top-nav-group {
                border       : 1px solid var(--contentBorderColor);
                border-radius: 6px;
                background: rgba(36, 36, 38, 0.75);
                .app-sidebar-item {
                    font-weight  : 500;
                    border-radius: 6px !important;
                    padding-inline: 20px;
                    flex-basis: content;
                    &.active,
                    &:hover {
                        border-left: none !important;

                        &::before {
                            --dist          : 0px;
                            border-radius   : 6px;
                        }

                        &+.app-sidebar-item {
                            border-left: none !important;
                        }
                    }

                    &+.app-sidebar-item {
                        border-left              : 1px solid var(--subtleBorderColor);
                        border-top-left-radius   : 0 !important;
                        border-bottom-left-radius: 0 !important;
                    }

                }
            }

            &::before {
                transition: width 0.35s var(--appleEase);
            }
        }

        .app-chrome.chrome-bottom {
            margin-left    : var(--sidebarWidth);
            left           : var(--dist, 0);
            right          : var(--dist, 0);
            bottom         : var(--dist, 0);
            width          : auto;
            position       : fixed;
            z-index        : 15;
            backdrop-filter: var(--glassFilterHeavy);
            transition     : margin-left 0.35s var(--appleEase);

            &::before {
                display: none;
            }

            .app-chrome-item:nth-of-type(2):not(.generic),
            .app-chrome-item .shuffle {
                margin: 0;
            }
        }

        .app-navigation {
            height: 100%;
            #app-sidebar .app-sidebar-content{
                height: 100% !important;
            }
            .content-inner {
                padding-bottom: calc(var(--chromeHeight2) + 20px);

                &.playlist-page {
                    padding-bottom: 0;
                    .playlist-body{
                        padding-bottom:  var(--chromeHeight2) !important;
                    }
                }
            }
        }

        .app-drawer {
            height         : calc(calc(100% - 4%) - var(--chromeHeight));
            top            : calc(var(--chromeHeight1) + 1%);
            backdrop-filter: var(--glassFilterHeavy) brightness(0.65);
        }

        &.modular-fs {
            .app-chrome.chrome-bottom {
                margin-left: 0;
            }

            .app-chrome:not(.chrome-bottom) {
                &::before {
                    width: 100%;
                }
            }

            .app-drawer {
                height: 100%;
                top   : 0;
            }
        }
    }

    &[library-visible="0"] {
        #app-main {
            .app-chrome.chrome-bottom {
                margin-left: 0;
            }
        }

        .app-chrome:not(.chrome-bottom) {
            .app-chrome--left > div:nth-of-type(3) {
                margin-left: 0 !important;
            }
            &::before {
                width: 100%;
            }
        }
    }
}

